Bug 493753 - Kate can't run script if it has backspaces in it's name
Summary: Kate can't run script if it has backspaces in it's name
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.1
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-09-27 20:55 UTC by reports_go_brrr
Modified: 2024-09-29 10:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Showcase (1.36 MB, video/mp4)
2024-09-27 20:55 UTC, reports_go_brrr
Details
Settings (57.86 KB, image/png)
2024-09-28 21:51 UTC, reports_go_brrr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description reports_go_brrr 2024-09-27 20:55:02 UTC
Created attachment 174156 [details]
Showcase

SUMMARY
Kate parses files name of file to be executed incorrectly when I try to execute it with "Tools" > "Run Current Document".
Works under X11 and Wayland.

STEPS TO REPRODUCE
1. Open Kate
2. Create New File (Ctrl+N)
3. Save it anywhere you want under name like "348. pasta was yummy.sh"
4. Open internal Terminal by clicking on button below.
5. Go to "Tools" > "Run Current Document"
6. Click "Run"
7. Check Terminal

OBSERVED RESULT
File name is written incorrectly, co file can't be executed that way.

EXPECTED RESULT
Fix it. Make it to support names with backspaces, unicode, periods, etc.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2
Kernel Version: 6.10.10-arch1-1 (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
Vanilla KDE Plasma, vanilla Kate.
© Art by axo1otl - "Scarlet Tree"
Comment 1 Waqar Ahmed 2024-09-28 18:06:37 UTC
In Settings -> Configure Kate... -> Terminal, uncheck "Remove extension"
Comment 2 reports_go_brrr 2024-09-28 21:39:50 UTC
(In reply to Waqar Ahmed from comment #1)
> In Settings -> Configure Kate... -> Terminal, uncheck "Remove extension"

Vanilla Kate with DEFAULT settings is used. The following section is unchecked. The bug is not "FIXED".
Comment 3 Waqar Ahmed 2024-09-28 21:44:47 UTC
Please share a screenshot of the settings so that I can be sure you have the right setting unchecked
Comment 4 reports_go_brrr 2024-09-28 21:51:08 UTC
Created attachment 174179 [details]
Settings

(In reply to Waqar Ahmed from comment #3)
> Please share a screenshot of the settings so that I can be sure you have the
> right setting unchecked
Comment 5 Waqar Ahmed 2024-09-29 10:13:47 UTC
Git commit eaffa9a27b3766b87919fa399c2f4cb24470ec4d by Waqar Ahmed.
Committed on 29/09/2024 at 10:13.
Pushed by waqar into branch 'master'.

konsole: Use same default value for 'RemoveExtension'

We were use a different default value in the config dialog vs the actual
run document function which would lead to confusion

M  +1    -1    addons/konsole/kateconsole.cpp

https://invent.kde.org/utilities/kate/-/commit/eaffa9a27b3766b87919fa399c2f4cb24470ec4d
Comment 6 Waqar Ahmed 2024-09-29 10:15:20 UTC
> In Settings -> Configure Kate... -> Terminal, uncheck "Remove extension"

You can enable this setting once, apply. Then open settings again and disable it. That should fix it.