konsole: Use same default value for 'RemoveExtension'

We were use a different default value in the config dialog vs the actual
run document function which would lead to confusion

BUG: 493753